# session-feature-extractor

./: .gitignore  404.html  LICENSE  README.md  example.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: format.yml  mkdocs.yml  publish.yml  tests.yml
api/: index.html
assets/sample_pcaps/: DNP3_Cold_Restart.csv  DNP3_info_attack.csv  DNP3_info_attack.pcap  ReadMe.md  mapping.json
assets/slurm_files/: ReadMe.md  dnp3_sfe.slurm  iec104_sfe.slurm  rosids23_sfe.slurm
cli/: index.html
configuration/: index.html
docs/: api.md  cli.md  configuration.md  examples.md  index.md
examples/: extraction.py  index.html  session_packet.py  sniffer.py
search/: search_index.json
sfe/: __init__.py
sfe/core/packet/: __init__.py  packet.py  streamer.py
sfe/core/session/: extractor.py  session.py
sfe/data/: __init__.py  extractor.py  sniffer.py
sfe/defs/: __init__.py  defs.py  session_flow.py
sfe/utils/: packet_utils.py
sfe/vis/: __init__.py  image.py  plot.py
tests/: test_extraction.py  test_packet.py  test_session.py
